<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/greyLight"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/text_welcome"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/imgPuzzle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_welcome"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/ic_puzzle"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="125dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/btn_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_tuto"
            android:layout_alignStart="@+id/btn_tuto"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_play"
            android:textColor="@android:color/white"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="309dp" />

        <Button
            android:id="@+id/btn_tuto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_tuto"
            android:textColor="@android:color/white"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="365dp" />

    </LinearLayout>


</LinearLayout>
